# Wonton

./: .fossa.yml  .gitignore  .gitmodules  .travis.yml  ADVICE.txt  FudanFPGAInterface.sln  LICENSE  LOG.txt  QUESTION.txt  README.en-US.md  README.html  README.md  Wonton.sln  azure-pipelines.yml  build.bash  build.cake  build.cmd  build.ps1
FudanFPGA.Common/: Class1.cs  FPGAManager.cs  FudanFPGA.Common.csproj
FudanFPGA.CrossUI/: App.xaml  App.xaml.cs  FudanFPGA.CrossUI.csproj  Program.cs  ViewLocator.cs
FudanFPGA.CrossUI.Web/: FudanFPGA.CrossUI.Web.csproj  Program.cs  Startup.cs  WeatherForecast.cs  electron.manifest.json
FudanFPGA.Test/: FudanFPGA.Test.csproj  UnitTest1.cs
FudanFPGA.WinUI.UWP/: App.xaml  App.xaml.cs  FudanFPGA.WinUI.UWP.csproj  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
FudanFPGA.WinUI.WPF/: App.xaml  App.xaml.cs  FudanFPGA.WinUI.WPF.csproj  MainWindow.xaml  MainWindow.xaml.cs
Script/: GenerateReadme.ps1  README.en-US.t.md  README.t.md
Wonton.Common/: FPGABoard.cs  FPGAException.cs  FPGAManager.cs  Wonton.Common.csproj
Wonton.CrossUI/: App.xaml  App.xaml.cs  Program.cs  ViewLocator.cs  (+1 more)
Wonton.CrossUI.Web/: .gitignore  HttpConfig.json  PortsIndexMap.txt  Program.cs  Startup.cs  VCDLog.txt  Waveform.vcd  Wonton.CrossUI.Web.csproj  WriteReadLog.txt  electron.manifest.json
Wonton.CrossUI.Web.HostApp/: .gitignore  Wonton.CrossUI.Web.HostApp.njsproj  main.js  main.ts  package-lock.json  package.json  skeleton.html  tsconfig.json  tslint.json
wonton-crosui-web-host/: Cargo.toml
wonton-crosui-web-host/src/: coreclr.rs  main.rs
(+138 files in other folders)
