[package]
name = "wonton-crosui-web-host"
version = "0.1.0"
authors = ["王渝 <wwangyuu@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.1"
libloading = "0.6.0"